--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
+[ ] - when macbook goes sleep, it stops the workflows
 [ ] - Add a `sort.Slice(execs, func(i, j int) bool ` on all list result in the database memory implementation
 [ ] - Check close
 [ ] - Configure logs
 [ ] - More tests
-[ ] - Optional automatic db cleaning
+[ ] - Optional automatic db cleaning 
 [ ] - main?
 [ ] - `ent` sqlite
